# rag-chat-bot

./: README.md  ingest.py  main.py  pyproject.toml  rag.py  requirements.txt
frontend/app/: page.tsx
frontend/app/api/chat/: route.ts
frontend/app/api/ingest/: route.ts
