[project]
name = "ragproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.128.8",
    "langchain>=0.3.30",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.86",
    "openai>=2.41.0",
    "pymupdf>=1.26.5",
    "pypdf>=6.12.2",
    "python-dotenv>=1.2.1",
    "tiktoken>=0.13.0",
    "uvicorn>=0.39.0",
]
